--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
-#container {
-  background-color: blue;
+html, body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  margin: 0px;
 }
+
+.container {
+  width: 90vmin;
+  height: 90vmin;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  border: 1px solid grey;
+}
+
+
+.row {
+  display: flex;
+  height: 100%;
+}
+
+.box {
+  width: 100%;
+}
+
